implementacion de icono para perfil de usuario

--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -70,7 +70,7 @@
 						<option th:each="u : ${lstTipoUsuario}" th:value ="${u.idtipo}"  th:text ="${u.descripcion}"></option>
 					</select>
                     </div>
-                    <button type="submit"  class="btn">crear cuenta</button>
+                    <button type="submit"  class="btncrearCuenta">crear cuenta</button>
                     <div class="login-register">
                         <p>¿ya tienes una cuenta? <a href="#" class="login-link" > Ingrese aqui </a></p>
                     </div>
