--- a/src/main/resources/templates/Mantenedores.html
+++ b/src/main/resources/templates/Mantenedores.html
@@ -18,6 +18,14 @@
         <a  href="/cargarMantenedores" >  Mantenedores</a>     
          <a  href="/cargarConsulta" >Consultas</a>  
         <a  href="/cargarReportes" >Reportes</a>
+                        <div class="dropdown">
+                    <button class="dropbtn"> <ion-icon class="icon" name="person-outline"></ion-icon> </button>
+                    <div class="dropdown-content">
+                        <a >Nombre de usuario</a>
+                        <a href="#">Editar perfil</a>
+                        <a href="#">Cerrar sesión</a>
+                    </div>
+                </div>
         <button class="btnCompra"  onclick="redirectCarrito()"><ion-icon  class="icon"  name="cart-outline" ></ion-icon></button>
     </nav>
   </header>
