--- a/src/main/resources/static/css/Producto.css
+++ b/src/main/resources/static/css/Producto.css
@@ -179,3 +179,56 @@ p{
     border-radius: 0.25rem;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+
+.navigation {
+    display: flex;
+    align-items: center; 
+}
+
+.navigation .dropdown {
+    margin-left: auto; 
+}
+
+.navigation a, .navigation .dropdown {
+    margin-left: 20px; 
+}
+
+.navigation .dropbtn{
+    width: 80px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid white;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    color: white;
+    font-weight: 300;
+    margin-left: 10px;
+    transition: .5s;
+}
