--- a/src/main/resources/templates/FormularioProducto.html
+++ b/src/main/resources/templates/FormularioProducto.html
@@ -16,6 +16,14 @@
         		<a  href="/cargarMantenedores" th:if="${u.tipo !=2}" >  Mantenedores</a>     
         		<a  href="/cargarConsulta" >Consultas</a>     
         		<a  href="/cargarReportes" th:if="${u.tipo !=2}">Reportes</a>
+        		                <div class="dropdown">
+                    <button class="dropbtn"> <ion-icon class="icon" name="person-outline"></ion-icon> </button>
+                    <div class="dropdown-content">
+                        <a >Nombre de usuario</a>
+                        <a href="#">Editar perfil</a>
+                        <a href="#">Cerrar sesión</a>
+                    </div>
+                </div>
             <button class="btnCompra"  onclick="redirectCarrito()"><ion-icon  class="icon"  name="cart-outline" ></ion-icon></button>
         </nav>
         
