--- a/src/main/resources/templates/Inicio.html
+++ b/src/main/resources/templates/Inicio.html
@@ -22,7 +22,7 @@
                     <button class="dropbtn"> <ion-icon class="icon" name="person-outline"></ion-icon> </button>
                     <div class="dropdown-content">
                         <a >Nombre de usuario</a>
-                        <a href="#">Editar perfil</a>
+                        <a href="/cargarEditarPerfil">Editar perfil</a>
                         <a href="#">Cerrar sesión</a>
                     </div>
                 </div>
