correcion de errores e implementacion de la funcion cerrar sesion

--- a/src/main/resources/templates/MantenedorProveedores.html
+++ b/src/main/resources/templates/MantenedorProveedores.html
@@ -20,9 +20,9 @@
                         <div class="dropdown">
                     <button class="dropbtn"> <ion-icon class="icon" name="person-outline"></ion-icon> </button>
                     <div class="dropdown-content">
-                        <a >Nombre de usuario</a>
-                        <a href="#">Editar perfil</a>
-                        <a href="#">Cerrar sesión</a>
+                          <a th:text="${ u.usuario}" ></a>
+                        <a href="/cargarEditarPerfil">Editar perfil</a>
+                        <a href="/CerrarSesion">Cerrar sesión</a>
                     </div>
                 </div>
         <button class="btnCompra" onclick="redirectCarrito()" ><ion-icon  class="icon"  name="cart-outline" ></ion-icon></button>
